--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -5,18 +5,18 @@
         <link rel="canonical" href="http://cgp2-c.com/paid-subscribe/" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>付费好用机场订阅推荐，Clash(小猫咪)节点购买推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - VPN设备 机场订阅节点官网</title>
-        <meta name="keywords" content="购买Clash节点推荐,Trojan机场排名,V2ray机场排名,中国国内好用的翻墙VPN推荐,购买代理机场排名,付费好用机场推荐,购买翻墙VPN排名" />
-        <meta name="description" content="2025 按量付费机场哪个好？甄选了几个口碑不错的按量付费机场，多数为不限时长按量付费好用机场，少部分限时1年或2年 - VPN设备 机场订阅节点官网" />
+    <title>2025 年多节点冗余付费机场推荐 — 提高连接可靠性</title>
+        <meta name="keywords" content="多节点VPN,冗余节点,Clash节点,V2ray机场,高可靠性,付费机场" />
+        <meta name="description" content="推荐提供多节点冗余的付费机场，保证连接稳定，不易掉线。" />
         <link rel="icon" href="/assets/website/img/v2rayunode/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="VPN设备 机场订阅节点官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="http://cgp2-c.com/paid-subscribe/" />
     <meta property="og:site_name" content="VPN设备 机场订阅节点官网" />
-    <meta property="og:title" content="付费好用机场订阅推荐，Clash(小猫咪)节点购买推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - VPN设备 机场订阅节点官网" />
+    <meta property="og:title" content="2025 年多节点冗余付费机场推荐 — 提高连接可靠性" />
     <meta property="og:image" content="/assets/website/img/v2rayunode/favicon.ico" />
-        <meta property="og:description" content="2025 按量付费机场哪个好？甄选了几个口碑不错的按量付费机场，多数为不限时长按量付费好用机场，少部分限时1年或2年 - VPN设备 机场订阅节点官网" />
+        <meta property="og:description" content="推荐提供多节点冗余的付费机场，保证连接稳定，不易掉线。" />
         
     <meta name="applicable-device" content="pc,mobile" />
     <meta name="renderer" content="webkit" />
@@ -25,7 +25,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="付费好用机场订阅推荐，Clash(小猫咪)节点购买推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - VPN设备 机场订阅节点官网">
+    <meta name="apple-mobile-web-app-title" content="2025 年多节点冗余付费机场推荐 — 提高连接可靠性">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -96,10 +96,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 intro-text">
-                            <h1>付费机场订阅推荐</h1>
+                            <h1>多节点冗余付费机场推荐</h1>
                             <p>
-                                <a href="/">首页</a> / 付费机场订阅推荐
-                            </p>
+                                <a href="/">首页</a> / 多节点冗余付费机场推荐                            </p>
                         </div>
                     </div>
                 </div>
@@ -111,7 +110,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                                                                            <div class="panel panel-default">
+                                                <p>本页整理的付费机场拥有多个冗余节点，能在网络波动或单点故障时自动切换线路，保证连接持续稳定，适合高可靠性需求的用户。</p>                            <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="register&code" target="_blank"><b>飞鸟加速</b></a>
                                 </div>
@@ -526,15 +525,15 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/free-nodes/2025-9-24-node-share-links.htm" title="VPN设备 | 9月24日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点免费节点订阅分享">VPN设备 | 9月24日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-8-vpn-node.htm" title="VPN设备 | 10月8日20.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月8日20.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-16-top-vpn-node.htm" title="VPN设备 | 9月16日20.2M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月16日20.2M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-4-vpn-node.htm" title="VPN设备 | 10月4日20.3M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享">VPN设备 | 10月4日20.3M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-21-vpn-proxy.htm" title="VPN设备 | 9月21日22.1M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月21日22.1M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-28-vpn-node.htm" title="VPN设备 | 9月28日20M/S|免费VPN/V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 9月28日20M/S|免费VPN/V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-vpn-free.htm" title="VPN设备 | 9月17日22.2M/S|免费VPN/Shadowrocket节点/SSR/V2ray节点/Clash免费节点订阅分享">VPN设备 | 9月17日22.2M/S|免费VPN/Shadowrocket节点/SSR/V2ray节点/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享">VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-23-free-vpn.htm" title="VPN设备 | 9月23日18.5M/S|免费VPN/V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN设备 | 9月23日18.5M/S|免费VPN/V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share-links.htm" title="VPN设备 | 9月26日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 9月26日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-15-free-vpn-node.htm" title="VPN设备 | 9月15日18.2M/S|免费VPN/SSR/Clash节点/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月15日18.2M/S|免费VPN/SSR/Clash节点/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-12-vpn-proxy.htm" title="VPN设备 | 10月12日22.5M/S|免费VPN/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点免费节点订阅分享">VPN设备 | 10月12日22.5M/S|免费VPN/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-mianfei-vpn.htm" title="VPN设备 | 10月9日22.1M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 10月9日22.1M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-node-share.htm" title="VPN设备 | 10月6日18.3M/S|免费VPN/Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月6日18.3M/S|免费VPN/Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-29-vpn-free.htm" title="VPN设备 | 9月29日20.7M/S|免费VPN/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享">VPN设备 | 9月29日20.7M/S|免费VPN/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-github.htm" title="VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享">VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-14-free-node-subscribe.htm" title="VPN设备 | 10月14日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点免费节点订阅分享">VPN设备 | 10月14日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -546,7 +545,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
